# gaia

./: .gitignore  .travis.yml  CMakeLists.txt  CTestConfig.cmake  Dockerfile  README.md  Untitled.ipynb  Vagrantfile  appveyor.yml  conda_env.yml  example.json  example2.json  geolib.py  numpy-1.10.4-cp27-none-macosx_10_6_intel.macosx_10_9_intel.macosx_10_9_x86_64.macosx_10_10_intel.macosx_10_10_x86_64.whl  plugin.cmake  plugin.json  requirements-2.6.txt  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.ipynb_checkpoints/: gaia_difference_propcess-checkpoint.ipynb
ansible/: site.yml
ansible/group_vars/: girder.yml
cmake/: travis_continuous.cmake
docs/: Makefile  conf.py  gaia.core.base.rst  gaia.core.data.rst  gaia.core.factory.rst  gaia.core.message.rst  gaia.core.pipeline.rst  gaia.core.port.rst  gaia.core.rst  gaia.core.stream.rst  gaia.core.task.rst  gaia.geo.rst  gaia.pandas.geopandas_data.rst  gaia.pandas.geopandas_plot.rst  gaia.pandas.geopandas_reader.rst  gaia.pandas.pandas_data.rst  gaia.pandas.rst  gaia.pandas.xray_data.rst  gaia.rst  index.rst  installation.rst  make.bat  modules.rst  plugin_tests.rst  plugins.rst  requirements.txt  server.rest.rst  server.rst  simplewps.rst  tests.cases.rst  tests.rst  usage.rst
docs/examples/: crop.py  ess_dive.ipynb  gaia_processes.html  gaia_processes.ipynb  gaia_show.ipynb  girder_example.ipynb  girder_example.py  girder_large_image.ipynb  girder_show.ipynb  job_submit.ipynb  lidar_vectors.ipynb  nersc_login.ipynb  pygeojs_example.ipynb
esgf/: utils.py
examples/: convert_to_shp.py
gaia/: __init__.py  _config.py  core.py  datasources.py  example.py  filters.py  formats.py  gaia_data.py  gaia_process.py  gdal_functions.py  girder_data.py  inputs.py  parser.py  process_registry.py  processes.py  processes_base.py  processes_raster.py  processes_vector.py  pysal_weights.py  satellite.py  tasks.py  test.png.aux.xml  types.py  util.py  validate_base.py  validators.py
gaia/.ipynb_checkpoints/: satellite_test-checkpoint.ipynb
gaia/conf/: gaia.cfg  gaia.dist.cfg
gaia/core/: __init__.py  _time.py
gaia/display/: deprecated_labgeojs_adapter.py  geojs.py  pygeojs_adapter.py
gaia/esgf/: __init__.py  __main__.py  auth.py  openssl.py  proxy.py  search.py
gaia/geo/: __init__.py  converter.py  gaia_process.py  gdal_functions.py  geo_inputs.py  processes_base.py  processes_raster.py  processes_twitter.py  processes_vector.py  rpc.py
gaia/inputs/: __init__.py  base.py  datatypes.py
gaia/io/: __init__.py  cumulus_interface.py  gaia_reader.py  gdal_reader.py  geojson_reader.py  girder_interface.py  girder_reader.py  netcdf_reader.py  postgis_reader.py  readers.py  writers.py
gaia/preprocess/: __init__.py  gdal_processes.py  girder_processes.py  pandas_processes.py
gaia/processes/: base.py  gdal_functions.py  raster_functions.py
gaia/satellite_test_data/: LC81070352015218LGN00_B5.TIF
geoprocessing/: __init__.py  core.py
geoprocessing/inputs/: base.py  formats.py
geoprocessing/processes/: base.py  raster_functions.py
io/: convert.py  mongoimp.py  vtk_reader.py
net/: geowebsocket.py
plugin_tests/: geoprocess_test.py  geoservice_proxy_test.py  simplewps_test.py
plugin_tests/data/: rest_featuretype.xml  wfs_getfeature.xml
server/: __init__.py  geoservice_proxy.py
server/conf/: gaia.dist.cfg  gaia.local.cfg
server/rest/: geoprocess.py  simple_wps.py
tests/: CMakeLists.txt  PythonTests.cmake  coveragerc.in  flake8.cfg  test_geoprocess.py
tests/cases/: .gitignore  base.py  docstring_test.py  port_test.py  (+15 more)
(+134 files in other folders)
